--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </ul>
 </div>
       <div class="centered">
-        <img src="summer.png" class="img-fluid" alt="Responsive image"><br><br>
+        <img src="../images/summer.png" class="img-fluid" alt="Responsive image"><br><br>
         <h5>Memories that will <strong>never fade!</strong> </h5>
     </div>
     
