--- a/services.html
+++ b/services.html
@@ -10,6 +10,22 @@
 </head>
 <body>
     <div class="maincontainer">
+        <div class="container">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color: white;" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color: white;" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" style="color: white;" href="contact.html">Contact Us</a>
+                </li>
+              </ul>
+        </div>
         <div class="services">
             <div id="servicesoverlay">
                 <h2>SERVICES</h2>
